Make sure header text is readable

--- a/style/css/bergie-2012.css
+++ b/style/css/bergie-2012.css
@@ -73,6 +73,7 @@ header h1 {
   font-family: {{ page.focusfont }};
   font-size: 28pt;
   line-height: 32pt;
+  text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
 }
 
 header h1 a {
